--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <th>World Geography</th>
                 <th>United Nations</th>
                 <th>World History</th>
-                <th>México</th>
+                <th>Mexico</th>
                 <th>Extras</th>
             </tr>
         </thead>
