Current Events column added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <th>United Nations</th>
                 <th>World History</th>
                 <th>Mexico</th>
-                <th>Extras</th>
+                <th>Current Events</th>
             </tr>
         </thead>
         <tbody>
@@ -61,8 +61,8 @@
                 <td id="tq04" class="cell clean" onclick="prompt.show('q04', 100)">
                     <h3>100</h3>
                     <div class="hide">
-                        <div id="q04">Extra Answer 1</div>
-                        <div id="aq04">Extra Question 1</div>
+                        <div id="q04">Moonlight</div>
+                        <div id="aq04">Which movie won Best Picture in the 89th Academy Awards?</div>
                     </div>
                 </td>
             </tr>
@@ -100,8 +100,8 @@
                 <td id="tq14" class="cell clean" onclick="prompt.show('q14', 200)">
                     <h3>200</h3>
                     <div class="hide">
-                        <div id="q14">Extra Answer 2</div>
-                        <div id="aq14">Extra Question 2</div>
+                        <div id="q14">Mauricio Ortega</div>
+                        <div id="aq14">Who stole Tom Brady’s jersey?</div>
                     </div>
                 </td>
             </tr>
@@ -160,22 +160,22 @@
                 <td id="tq32" class="cell clean" onclick="prompt.show('q32', 400)">
                     <h3>400</h3>
                     <div class="hide">
-                        <div id="q32">Russia</div>
+                        <div id="q32">Russia or Soviet Union</div>
                         <div id="aq32">Which was the first country to send a woman to outer space?</div>
                     </div>
                 </td>
                 <td id="tq33" class="cell clean" onclick="prompt.show('q33', 400)">
                     <h3>400</h3>
                     <div class="hide">
-                        <div id="q33">Juan Escutia, Agustín Melgar, Juan de la Barrera, Fernando Montes de Oca, Vicente Suárez, y Francisco Márquez</div>
+                        <div id="q33">Juan Escutia, Agustín Melgar, Juan de la Barrera, Fernando Montes de Oca, Vicente Suárez, and Francisco Márquez</div>
                         <div id="aq33">Name the six “heroic children”</div>
                     </div>
                 </td>
                 <td id="tq34" class="cell clean" onclick="prompt.show('q34', 400)">
                     <h3>400</h3>
                     <div class="hide">
-                        <div id="q34">Extra Answer 4</div>
-                        <div id="aq34">Extra Question 4</div>
+                        <div id="q34">Hawaii</div>
+                        <div id="aq34">From which state is the judge who recently rejected Trump’s travel ban?</div>
                     </div>
                 </td>
             </tr>
@@ -211,8 +211,8 @@
                 <td id="tq44" class="cell clean" onclick="prompt.show('q44', 500)">
                     <h3>500</h3>
                     <div class="hide">
-                        <div id="q44">Extra Answer 5</div>
-                        <div id="aq44">Extra Question 5</div>
+                        <div id="q44">March</div>
+                        <div id="aq44">In which month will Brexit officially happen?</div>
                     </div>
                 </td>
             </tr>
