index.html updated

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                 <td id="tq24" class="cell clean" onclick="prompt.show('q24', 300)">
                     <h3>300</h3>
                     <div class="hide">
-                        <div id="q24">Extra Answer 3</div>
-                        <div id="aq24">Extra Question 3</div>
+                        <div id="q24">Comodin</div>
+                        <div id="aq24">Surprise...!!!</div>
                     </div>
                 </td>
             </tr>
