Current events questions updated

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 <td id="tq14" class="cell clean" onclick="prompt.show('q14', 200)">
                     <h3>200</h3>
                     <div class="hide">
-                        <div id="q14">Mauricio Ortega</div>
-                        <div id="aq14">Who stole Tom Brady’s jersey?</div>
+                        <div id="q14">London</div>
+                        <div id="aq14">Which European city was victim of a terrorist attack this last Wednesday?</div>
                     </div>
                 </td>
             </tr>
@@ -137,8 +137,8 @@
                 <td id="tq24" class="cell clean" onclick="prompt.show('q24', 300)">
                     <h3>300</h3>
                     <div class="hide">
-                        <div id="q24">Comodin</div>
-                        <div id="aq24">Surprise...!!!</div>
+                        <div id="q24">Mauricio Ortega</div>
+                        <div id="aq24">Who stole Tom Brady’s jersey?</div>
                     </div>
                 </td>
             </tr>
