Update to 6 teams and 6 sections

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     <table id="game" cellspacing="5" cellpadding="0" class="hide">
         <thead>
             <tr>
-                <th>World Geography</th>
-                <th>United Nations</th>
                 <th>World History</th>
-                <th>Mexico</th>
+                <th>World Geography</th>
+                <th>Arts</th>
+                <th>Science</th>
                 <th>Current Events</th>
+                <th>United Nations</th>
             </tr>
         </thead>
         <tbody>
@@ -65,6 +66,13 @@
                         <div id="aq04">Which movie won Best Picture in the 89th Academy Awards?</div>
                     </div>
                 </td>
+                <td id="tq05" class="cell clean" onclick="prompt.show('q05', 100)">
+                    <h3>100</h3>
+                    <div class="hide">
+                        <div id="q05">A5</div>
+                        <div id="aq05">Q5?</div>
+                    </div>
+                </td>
             </tr>
             <tr>
                 <td id="tq10" class="cell clean" onclick="prompt.show('q10', 200)">
@@ -95,6 +103,13 @@
                     <div class="hide">
                         <div id="q13">123</div>
                         <div id="aq13">Which article from the Mexican constitution state labor laws?</div>
+                    </div>
+                </td>
+                <td id="tq14" class="cell clean" onclick="prompt.show('q14', 200)">
+                    <h3>200</h3>
+                    <div class="hide">
+                        <div id="q14">London</div>
+                        <div id="aq14">Which European city was victim of a terrorist attack this last Wednesday?</div>
                     </div>
                 </td>
                 <td id="tq14" class="cell clean" onclick="prompt.show('q14', 200)">
@@ -141,8 +156,15 @@
                         <div id="aq24">Who stole Tom Brady’s jersey?</div>
                     </div>
                 </td>
+                <td id="tq24" class="cell clean" onclick="prompt.show('q24', 300)">
+                    <h3>300</h3>
+                    <div class="hide">
+                        <div id="q24">Mauricio Ortega</div>
+                        <div id="aq24">Who stole Tom Brady’s jersey?</div>
+                    </div>
+                </td>
             </tr>
-            <tr>
+            <!--tr>
                 <td id="tq30" class="cell clean" onclick="prompt.show('q30', 400)">
                     <h3>400</h3>
                     <div class="hide">
@@ -178,7 +200,7 @@
                         <div id="aq34">From which state is the judge who recently rejected Trump’s travel ban?</div>
                     </div>
                 </td>
-            </tr>
+            </!--tr>
             <tr>
                 <td id="tq40" class="cell clean" onclick="prompt.show('q40', 500)">
                     <h3>500</h3>
@@ -215,7 +237,7 @@
                         <div id="aq44">In which month will Brexit officially happen?</div>
                     </div>
                 </td>
-            </tr>
+            </tr-->
         </tbody>
     </table>
     <div id="options">
@@ -227,9 +249,9 @@
             <option value="2">2 teams</option>
             <option value="3">3 teams</option>
             <option value="4">4 teams</option>
-            <!--option value="5">5 teams</option>
+            <option value="5">5 teams</option>
             <option value="6">6 teams</option>
-            <option value="7">7 teams</option>
+            <!--option value="7">7 teams</!--option>
             <option value="8">8 teams</option>
             <option value="9">9 teams</option>
             <option value="10">10 teams</option>
